syntax = "proto3";

option csharp_namespace = "FurtherProcessingActionService.Protos";

message CustomerProfileRequest{
        int32 customerId = 1;
    }

    message CustomerProfileResponse{
        int32 customerId = 1;
        string CustomerClass = 2;
        double averagePurchaseAmount = 3;
    }

    service CustomerProfilingService{
        rpc GetCustomerProfile(CustomerProfileRequest) returns (CustomerProfileResponse);
    }
